--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
     <version>1.0-SNAPSHOT</version>
     <name>Archetype - KoreanVideoPoker</name>
     <url>http://maven.apache.org</url>
+    <!-- Add Spring Boot parent POM -->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.5</version> <!-- Use the latest stable version -->
+        <relativePath/>
+    </parent>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -64,6 +71,22 @@
             <artifactId>system-lambda</artifactId>
             <version>1.2.1</version>
             <scope>test</scope>
+        </dependency>
+        <!-- Spring Boot Starter Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- Spring Boot Starter Thymeleaf (for server-side rendering) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <!-- Spring Boot DevTools (optional, for hot reloading) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
